fix footer texte align

--- a/frontend/src/stylesheets/footer.css
+++ b/frontend/src/stylesheets/footer.css
@@ -48,3 +48,7 @@
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
   }
+
+  .mb-3{
+    text-align: center;
+  }
